# NOTE: you have to use single-quoted strings in TOML for regular expressions.
# It's the equivalent of r-strings in Python.  Multiline strings are treated as
# verbose regular expressions by Black.  Use [ ] to denote a significant space
# character.

[project]

name = "lattpy"
description = "Simple and efficient Python package for modeling d-dimensional Bravais lattices in solid state physics."
authors = ["Dylan Jones <dylanljones94@gmail.com>"]
license = "MIT"
readme = "README.md"
python = "^3.7"
homepage = "https://github.com/dylanljones/lattpy"
repository = "https://github.com/dylanljones/lattpy"
documentation = "https://lattpy.readthedocs.io/en/stable/"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

# -- Black -----------------------------------------------------------------------------

[tool.black]

line-length = 88
include = '\.pyi?$'
exclude = "__main__.py|_version.py|renderer"
