[metadata]
name = lattpy
description = Simple and efficient Python package for modeling d-dimensional Bravais lattices in solid state physics.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dylanljones/lattpy
author = Dylan Jones
author_email = dylanljones94@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Physics
    Natural Language :: English
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    Source = https://github.com/dylanljones/lattpy
    Documentation = https://lattpy.readthedocs.io/
    Tracker = https://github.com/dylanljones/lattpy/issues

[options]
packages = find:
install_requires =
    setuptools>=60.0.0
    setuptools-scm[toml]>=4
    numpy>=1.20.3
    scipy>=1.7.1
    matplotlib>=3.0.0
    pytest>=6.2.5
    hypothesis>=6.0.0
    colorcet>=2.0.0
python_requires = >=3.7
include_package_data = True
platforms = any
zip_safe = False

[options.extras_require]
build =
    wheel>=0.37.0
test =
    pytest-cov
renderer =
    PyOpenGL>=3.0.0
    PyQt5>=5.15.0


[aliases]
test=pytest


[build_sphinx]
project = "LattPy"
source-dir = ./docs/source
build-dir = ./docs/build


[pydocstyle]
add-ignore = D105  # ignore undocumented dunder methods like ``__str__`


[flake8]
max-line-length = 88
ignore = D203
extend-ignore = E203
per-file-ignores = __init__.py:F401
exclude =
    .git,
    .idea,
    __pycache__,
    build,
    dist,
    lattpy/tests/*,
    docs/*,
    .social/*,
    _version.py,


[coverage:run]
branch = False
source = lattpy

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover

	# Don't complain about debug-only code and print statements:
    def __repr__
    def __str__

	# Don't complain about abstract methods
    @abstract

    # Ignore properties. These are usually simple getters
    @property

    # Don't complain if tests don't hit defensive assertion code:
    raise AssertionError
    raise NotImplementedError

    # Don't complain if non-runnable code isn't run:
    if 0:
    if __name__ == .__main__.:

ignore_errors = True

# Skip source files:
omit =
  lattpy/tests/*
  lattpy/__init__.py
  lattpy/plotting.py
  lattpy/disptools.py
  lattpy/_version.py
